--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "arkovlechauve.github.io",
+  "name": "arkovlechauvev2.github.io",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
